add comment & update UI

--- a/notebooks/Stress Detection from Social Media Articles.ipynb
+++ b/notebooks/Stress Detection from Social Media Articles.ipynb
@@ -46,29 +46,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "import re\n",
+    "import pickle\n",
+    "import streamlit as st"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Load the datasets into DataFrames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Load datasets from Excel files\n",
     "df_reddit_combi = pd.read_excel('../data/Reddit_Combi.xlsx')\n",
     "df_reddit_title = pd.read_excel('../data/Reddit_Title.xlsx')\n",
     "df_twitter_full = pd.read_excel('../data/Twitter_Full.xlsx')\n",
@@ -77,16 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Explore the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,26 +92,7 @@
       "3123\n",
       "5556\n",
       "8900\n",
-      "2051\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_reddit_combi.shape[0])\n",
-    "print(df_reddit_title.shape[0])\n",
-    "print(df_twitter_full.shape[0])\n",
-    "print(df_twitter_non_ad.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2051\n",
       "Index(['title', 'body', 'Body_Title', 'label'], dtype='object')\n",
       "Index(['title', 'label'], dtype='object')\n",
       "Index(['text', 'hashtags', 'labels'], dtype='object')\n",
@@ -124,6 +101,12 @@
     }
    ],
    "source": [
+    "# Explore data (number of rows and column names for each DataFrame)\n",
+    "print(df_reddit_combi.shape[0])\n",
+    "print(df_reddit_title.shape[0])\n",
+    "print(df_twitter_full.shape[0])\n",
+    "print(df_twitter_non_ad.shape[0])\n",
+    "\n",
     "print(df_reddit_combi.columns)\n",
     "print(df_reddit_title.columns)\n",
     "print(df_twitter_full.columns)\n",
@@ -132,7 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# View the first few rows of each DataFrame to get a sense of the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +217,7 @@
        "4  Is it possible to recover from such a traumati...      1  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +295,7 @@
        "4  A mother's reaction after seeing her son has p...      0"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +386,7 @@
        "4                                                 []       0  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +464,7 @@
        "4  XpertOnline offers you the convenience of view...      1"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -571,6 +563,7 @@
     }
    ],
    "source": [
+    "# Check for missing values\n",
     "print(df_reddit_combi.isnull().sum())\n",
     "print(df_reddit_title.isnull().sum())\n",
     "print(df_twitter_full.isnull().sum())\n",
@@ -579,25 +572,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_reddit_combi.dropna(inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Handle missing values\n",
+    "df_reddit_combi.dropna(inplace = True)\n",
     "df_twitter_full.dropna(inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -623,6 +609,7 @@
     }
    ],
    "source": [
+    "# Check for missing values after dropping rows\n",
     "print(df_reddit_combi.isnull().sum())\n",
     "print(df_reddit_title.isnull().sum())\n",
     "print(df_twitter_full.isnull().sum())\n",
@@ -631,10 +618,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Preprocess Reddit combi data: Drop title and body columns, rename Body_Title to title\n",
     "df_reddit_combi = df_reddit_combi.drop(['title', 'body'], axis = 1)\n",
     "df_reddit_combi = df_reddit_combi.rename(columns = {'Body_Title':'title'})"
    ]
@@ -645,30 +633,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sample hashtags = ['momlife', 'kids', 'tired']\t\n",
+    "# Preprocess Twitter full data: Clean hashtags using regular expressions, rename columns\n",
+    "# sample hashtags = ['momlife', 'kids', 'tired']\t\n",
     "import re\n",
     "\n",
     "def clean_hashtag (hashtags):\n",
     "    clean_hashtag = re.sub(r'[\\[\\]\\']', '', hashtags)\n",
     "\n",
-    "    return clean_hashtag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_twitter_full['hashtags'] = df_twitter_full['hashtags'].apply(clean_hashtag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return clean_hashtag\n",
+    "\n",
+    "df_twitter_full['hashtags'] = df_twitter_full['hashtags'].apply(clean_hashtag)\n",
+    "\n",
     "df_twitter_full = df_twitter_full.rename(columns = {'labels' : 'label'})\n",
     "df_twitter_full = df_twitter_full.rename(columns = {'text':'title'})\n",
     "df_twitter_full['title'] = df_twitter_full['hashtags'] + ' ' + df_twitter_full['title']\n",
@@ -779,6 +754,7 @@
     }
    ],
    "source": [
+    "# Verify column names after preprocessing\n",
     "print(df_reddit_combi.columns)\n",
     "print(df_reddit_title.columns)\n",
     "print(df_twitter_full.columns)\n",
@@ -860,6 +836,7 @@
     }
    ],
    "source": [
+    "# Concatenate all preprocessed DataFrames into a single DataFrame\n",
     "df = pd.concat([df_reddit_combi, df_reddit_title, df_twitter_full, df_twitter_non_ad], ignore_index = True)\n",
     "df.head()"
    ]
@@ -890,7 +867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#check any empty string or space\n",
+    "# Check for empty strings or spaces\n",
     "blank = []\n",
     "\n",
     "for i, ttl, lbl in df.itertuples():\n",
@@ -915,16 +892,8 @@
     }
    ],
    "source": [
-    "blank"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
+    "# No empty strings or spaces found \n",
+    "print(blank)"
    ]
   },
   {
@@ -933,31 +902,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into features (title) and target (stress)\n",
     "X = df['title']\n",
     "y = df['label']\n",
     "\n",
+    "# Split data into training and testing sets (80% for training, 20% for testing)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y , test_size = 0.2, random_state = 42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.svm import LinearSVC\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
    ]
   },
   {
@@ -966,6 +916,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a pipeline that combines TF-IDF vectorization and LinearSVC classification\n",
     "pipeline = Pipeline([('tfidf', TfidfVectorizer()), ('clf', LinearSVC())])"
    ]
   },
@@ -1401,6 +1352,7 @@
     }
    ],
    "source": [
+    "# Fit the pipeline to the training data\n",
     "pipeline.fit(X_train, y_train)"
    ]
   },
@@ -1410,6 +1362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions on the testing data\n",
     "y_pred = pipeline.predict(X_test)"
    ]
   },
@@ -1447,6 +1400,7 @@
     }
    ],
    "source": [
+    "# Evaluate the model's performance\n",
     "print(accuracy_score(y_test, y_pred))"
    ]
   },
@@ -1500,17 +1454,18 @@
    "outputs": [],
    "source": [
     "#'0' specifies a Stress Negative article and '1' specifies a Stress Positive article\n",
+    "# Sample\n",
     "output = pipeline.predict(['The weight of the world seems to be crushing down on me. Every task feels like a mountain to climb, and I can barely keep my head above water. The constant barrage of demands and responsibilities is overwhelming, and I’m starting to feel like I’m losing my grip on everything. My mind is racing, my body is exhausted, and I can’t seem to find any peace or quiet. I’m at my breaking point, and I just need a moment to breathe and regroup.'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#'0' specifies a Stress Negative article and '1' specifies a Stress Positive article\n",
-    "#output = pipeline.predict(['The sun was shining brightly, casting a warm glow over the city. A gentle breeze carried the sweet scent of blooming flowers, and birdsong filled the air. As I strolled through the park, I couldn’t help but feel a sense of overwhelming joy. Everything seemed perfect, and I couldn’t imagine a better day. My heart was filled with gratitude for all the wonderful things in my life, and I knew that I was truly blessed.'])"
+    "# Sample\n",
+    "#output = pipeline.predict([\"The weight of the world seems to be crushing down on me.\"])"
    ]
   },
   {
@@ -1539,6 +1494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Packaging and Deploying Setup/Steps\n",
     "#1) https://www.python.org/downloads/\n",
     "#2) python -m ensurepip --upgrade\n",
     "#3) pip install streamlit\n",
@@ -1550,21 +1506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import streamlit as st\n",
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install nbconvert"
+    "# Save the trained model "
    ]
   },
   {
@@ -1577,13 +1523,6 @@
     "with builtins.open('Stress_Detection_App.pkl', 'wb') as file:\n",
     "    pickle.dump(pipeline, file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
